Docs should be ready. Numerous fixes made. Intext code chunks overlap should be fixed. Sizing of multiple elements adjusted.

--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -120,13 +120,13 @@ body {
 }
 
 .dataset-container {
-    width: 12%; /* Adjust the width as needed */
+    width: 65px;
     margin-bottom: 20px;
 }
 
 .dataset-link {
     display: block;
-    background-color: #f2f2f2;
+    background-color: #f2f0f0;
     border-radius: 15px;
     padding: 10px;
     text-align: center;
@@ -134,11 +134,12 @@ body {
     color: #333;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     margin-bottom: 5px;
+    width: 65px;
 }
 
 .dataset-blurb {
     padding: 10px;
-    width: 80%;
+    width: 65px;
     text-indent: 2px;
     background-color: #f9f9f9;
     border-radius: 10px;
@@ -149,7 +150,8 @@ code {
     background-color: white; 
     width: 60%;
     border: 1px solid #ccc; 
-    padding: 10px; 
+    padding: 2.5px; 
+    
 }
 
 /* pre > code.language-bash {
